# circuitcellar-EmbeddedSystemEssentials

./: README.md
2023_01_JAN/: Listing 3 - Python script brute-force.py
2023_05_MAY/: firstbyte_guess_traces.npy
390_2023_01_JAN/: Listing 1 - SRAM Demo Code in C.c  Listing 2 - Part of MAP file.txt  Listing 4 - Permutation Search.py  Listing 5 - Key schedule search.py  Listing 6 - XORs.c
394_2023_05_MAY/: Figures - Circuit Cellar.ipynb  diffs_password_firstbyte.npy  glitch_clock.npy
396_2023_07_JULY/: Figures for CC Article.ipynb  aes_trace.npy  top_cw312a35.bit
406_2024_05_MAY/: JTAG Experiments Notebook.ipynb  README.md  jtag_hpfiltered_idtraces.npy  lengths.npy
426_2026_01_JAN/: README.md  simple_attack_example.py
426_2026_01_JAN/article_figures/: Listing 1.c  Listing 2.asm  Listing 3.py  Listing 4.txt  Listing 5.txt
426_2026_01_JAN/pico-source/: CMakeLists.txt  README.md
426_2026_01_JAN/pico-source/colin_overflow_password/: CMakeLists.txt
426_2026_01_JAN/pico-source/colin_overflow_password/usb/: CMakeLists.txt  password_usb.c
